--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,9 @@
   	<url-pattern>/ola</url-pattern>
   </servlet-mapping>
   
+  <session-config>
+    <!-- 10 min -->
+    <session-timeout>10</session-timeout>
+</session-config> 
+  
 </web-app>
